[package]
name = "blvflag"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indicatif = "0.16"
ollama-rs = { version = "0.1", features = ["stream"] }
tokio = { version = "1.12", features = ["full"] }
tokio-stream = { version = "0.1", features = ["full"] }
directories = "3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = "3.0"
reqwest = { version = "0.11", features = ["json"] }
# tempfile = "3.3.0"
regex = "1.5.4"
indicatif = "0.17"
directories = "5.0"