[package]
name = "blvflag"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ollama-rs = { version = "0.1", features = ["stream"] }
tokio = { version = "1.12", features = ["full"] }
tokio-stream = { version = "0.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "3", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "blocking"] } # Added `blocking`
regex = "1.5.4"
indicatif = "0.17"
directories = "5.0"

